2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Routes.wrl:
	* Disk2D.wrl: 

2013-11-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Routes.wrl: 

2013-11-29  Holger Seelig  <holger.seelig@yahoo.de>

	* image.xcf: 

2013-11-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Routes.wrl: 

2013-11-27  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Routes.wrl: 

2013-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Routes.wrl: 

2013-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Routes.wrl: 

2013-11-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Routes.wrl:
	* OutlineEditor.wrl: 

2013-11-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Route.wrl: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-11-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Inline.wrl:
	* OutlineEditor.wrl: 

2013-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* HoleCentered.x3dv: 

2013-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* FredTheBunny.x3dv:
	* HoleCentered.x3dv: 

2013-11-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Connectors.wrl:
	* Rectangle2D.x3dv:
	* HoleCentered.x3dv: 

2013-11-14  Holger Seelig  <holger.seelig@yahoo.de>

	* FourDucks.x3dv: 

2013-11-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* FourDucks.x3dv:
	* NurbsPatch.x3dv:
	* MobiusNurbs.x3dv:
	* FredTheBunny.x3dv:
	* HurricaneLantern.x3dv:
	* NurbsPatchImageTexture.x3dv:
	* NurbsPatchSurfaceExample.x3dv:
	* FourDucks.x3dv: