@@ -121,7 +121,7 @@ DEF Rotor Rotor {
 
 DEF Box Transform {
   translation 1.40843 1.10727 0.193803
-  rotation 0 0 1 4.56334
+  rotation 0 0 1 5.30468
   scale 0.2 0.2 0.2
   children Transform {
     children Shape {
