@@ -4,6 +4,10 @@
 
 2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineEditor.wrl: 
+
+2013-12-01  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Routes.wrl:
 	* Disk2D.wrl: 
 
